--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,13 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <form name="contactForm" netlify netlify-honeypot="bot-field" hidden>
+      <input className="form-control" id="name" name="name" type="text" />
+      <input className="form-control" id="email" name="email" type="email" />
+      <input className="form-control" id="reason" name="reason" type="text" />
+      <textarea className="form-control" id="message" name="message"></textarea>
+    </form>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
