--- a/src/thanks.html
+++ b/src/thanks.html
@@ -1,6 +1,18 @@
-<div>
-  <h1>Thank you</h1>
-  <a href="/">
-    <button type="button">Go home</button>
-  </a>
+<div class="main">
+  <div class="card">
+    <div class="header">
+      <h1>Thank you!</h1>
+    </div>
+    <div class="body">
+      <p>submission has been received.</p>
+
+      <p>
+        <a
+          id="back-link"
+          href="https://master--tender-heyrovsky-b9724b.netlify.app/contact"
+          >← Back to our site</a
+        >
+      </p>
+    </div>
+  </div>
 </div>
