--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <body>
     <form
       name="contactForm"
-      action="/thanks"
+      action="https://tender-heyrovsky-b9724b.netlify.app/thanks"
       netlify
       netlify-honeypot="bot-field"
       hidden
