--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,7 @@
     <title>Damiron Family Photography</title>
   </head>
   <body>
-    <form
-      name="contactForm"
-      action="https://tender-heyrovsky-b9724b.netlify.app/thanks"
-      netlify
-      netlify-honeypot="bot-field"
-      hidden
-    >
+    <form name="contactForm" netlify netlify-honeypot="bot-field" hidden>
       <input className="form-control" id="name" name="name" type="text" />
       <input className="form-control" id="email" name="email" type="email" />
       <input className="form-control" id="reason" name="reason" type="text" />
