--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,7 @@
       <textarea className="form-control" id="message" name="message"></textarea>
     </form>
     <form name="appointmentsForm" netlify netlify-honeypot="bot-field" hidden>
-      <input name="firstName" class="form-control" />
-      <input name="lastName" class="form-control" />
+      <input name="fullName" class="form-control" />
       <input
         name="email"
         type="email"
