--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
         id="exampleForm.ControlSelect1"
         class="form-control"
       ></select>
+            <input name="photoStyle" class="form-control" />
     </form>
     <div id="root"></div>
   </body>
